--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Text:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="style.css">
+<script src="https://kit.fontawesome.com/a542c534eb.js" crossorigin="anonymous"></script>
 	<title>Dental</title>
 </head>
 <body>
@@ -34,6 +35,7 @@
             <li class="menu-item">
               <a class="menu-link" href="#">Blog </a>
             </li>
+						<i class="fas fa-bars"></i>
           </ul>
         </nav>
       </header>
