Added the section Appointment

--- a/index.html
+++ b/index.html
@@ -60,6 +60,47 @@
       </div>
     </div>
   </div>
+  <!--Shairgul начало-->
+  <section class="appointment">
+    <div class="container">
+        <div>
+            <img class="doctor-img" src="images/heal-specialist-procedure-cure-patient 1.png" alt="Patient1" width="600">
+        </div>
+        <div class="appointment-form">
+            <p class="appointment-title">
+                Appointment create for your treatment 
+            </p>
+            <form>
+            <select name="department" id="">
+                <option disabled selected value="Select Department">Select Department</option>
+                <option value="Scan">Scan</option>
+                <option value="Consultation">Consultation</option>
+            </select>
+            <select name="doctor" id="">
+                <option disabled selected value="Select a Doctor">Select a Doctor</option>
+                <option value="Adilet Jumaev">Adilet Jumaev</option>
+                <option value="Kunduz Askarova">Kunduz Askarova</option>
+            </select>
+            <p>
+                <input name="fullname" type="text" placeholder="Your Full Name">
+                <input name="phonenumber" type="text" placeholder="Your Your Number">
+            </p>
+            <p>
+                <input name="date" type="text" placeholder="Select Date">
+                <input name="time" type="text" placeholder="Select Time">
+            </p>
+            <p>
+                 <input name="book-now" type="submit" value="Book Now">
+            </p> 
+           
+        </form>
+
+        </div>
+
+    </div>
+
+</section>
+<!--Shairgul конец-->
 
 
 </body>
