--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 
 </section>
 
-<main
+<main>
 <div id="footer">
   <div class="container-footer">
       <div class="footer">
@@ -157,6 +157,6 @@
   </div>
 
 </div>
-/main> 
+</main> 
 </body>
 </html>
