--- a/index.html
+++ b/index.html
@@ -61,6 +61,30 @@
     </div>
   </div>
 	
+  <section class="info">
+    <div class="conteiner">
+        <div class="conteiner_main">
+        <div class="conteiner_about1">
+            <a href="#">2130</a>
+            <p><a href="#">Более 27 лет опыта</a> </p>
+        </div>
+        <div class="conteiner_about2">
+            <a href="#">100+</a>
+            <p><a href="#">Успешно завершенные процедуры</a></p>
+        </div>
+        <div class="conteiner_about3">
+            <a href="#">190</a>
+            <p><a href="#">Практикующий стоматолог и медсестры</a></p>
+        </div>
+        <div class="second-conteiner_picture">
+           <img src="https://images.unsplash.com/photo-1564420228450-d9a5bc8d6565?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTR8fGRlbnRhbCUyMHRlY2huaWNpYW58ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60" alt=""> </div>
+               <span><h1>Medico — крупнейшая сеть здравоохранения в регионе.</h1>Приоритет нашей клиники — Эстетическая стоматология, что является ведущим направлением в мировой стоматологии на сегодняшний день!</span>
+  
+  
+  <button class="custom-btn btn-1">Узнать побробнее</button>
+     </div>     
+  
+    </section>
 	
   <section class="appointment">
     <div class="container">
@@ -112,7 +136,7 @@
 
 </section>
 
-<main
+<main>
 <div id="footer">
   <div class="container-footer">
       <div class="footer">
@@ -157,6 +181,6 @@
   </div>
 
 </div>
-/main> 
+</main> 
 </body>
 </html>
